Fix code smells and update dependencies.